# ctypes_cspice

./: .gitignore  CMakeLists.txt  README.md  build.bash  ctypes_test.py
cspice/: .gitignore  CMakeLists.txt  get_cspice.bash
data/: .gitignore  get_smap_kernels.bash
